# qwe

./: .gitignore
Tic-Tac-Toe_game/: CMakeLists.txt  Exception.cpp  GameIntelligence.cpp  GameIntelligence.h  Matrix.h  TicTacToe.cpp  TicTacToe.h  TreeX.h  graphStruct.txt  main.cpp
TicTacToeGame/: CMakeLists.txt  Exception.cpp  Exception.h  Game.h  GameDecisionTreeX.cpp  GameDecisionTreeX.h  GameIntelligence.cpp  GameIntelligence.h  Matrix.h  Minimax.cpp  Minimax.h  NodeX.h  Optional.h  TicTacToe.cpp  TicTacToe.h  TreeX.h  Utils.cpp  Utils.h  main.cpp
collections/: Array.h  ArrayElement.h  ArraySequence.h  BaseTest.h  BinaryHeap.h  CMakeLists.txt  Exceptions.h  Human.h  List.h  ListElement.h  ListSequence.h  Pair.h  Sequence.h  Stream.h  Student.h  Teacher.h  UnitTests.h  Utils.h  main.cpp
forqard_list/: CMakeLists.txt  ForwardList.h  ListElement.h  main.cpp
lab2_2/: AVLTree.hpp  Array.hpp  ArrayElement.hpp  BTree.hpp  BTreeDictionary.hpp  CMakeLists.txt  CommonTests.hpp  Exceptions.cpp  Exceptions.hpp  GameField.cpp  GameField.hpp  HeapSorter.hpp  ISorter.hpp  KVElement.hpp  MainWindow.cpp  MainWindow.hpp  Minimax.cpp  Minimax.hpp  Opt.hpp  Pair.hpp  SequenceField.cpp  ShellSorter.hpp  SortersTests.hpp  SparseVector.hpp  TZ_Maksimov_B19-514.docx  TestsField.cpp  TestsField.hpp  TicTacToe.cpp  TicTacToe.hpp  Utils.hpp  VectorField.cpp  VectorField.hpp  main.cpp  run_tests
lab2_3/: AVLTree.hpp  AVLTreeDictionary.hpp  Array.hpp  CMakeLists.txt  Exceptions.cpp  Exceptions.hpp  GraphInteractionWindow.cpp  GraphInteractionWindow.hpp  GraphInteractionWindow.ui  GraphVisualizationWindow.cpp  GraphVisualizationWindow.hpp  GraphVisualizationWindow.ui  IDictionary.hpp  LinkedList.hpp  LinkedListSequence.hpp  ListElement.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Matrix.hpp  Pair.hpp  QuickSorter.hpp  Sequence.hpp  SequenceField.hpp  SequenceIterator.hpp  UIGraphInteractionWindow.hpp  UIGraphVisualizationWindow.hpp  UIMainWindow.hpp  UndirectedGraph.hpp  UnitTests.hpp  main.cpp
matrix_v1.0/: CMakeLists.txt  main.c
matrix_v2.0/: CMakeLists.txt  main.c  matrix.h  test.h
set/: CMakeLists.txt  list.cpp  list.h  main.cpp  set.cpp  set.h
set_collection/: CMakeLists.txt  animal.h  array.h  array_element.h  array_sequence.h  binary_heap.h  list.h  list_element.h  list_sequence.h  main.cpp  mutable_sequence.h  queue.h  sequence.h  set.h  stack.h  stream.h
sorter/: ArrayElement.hpp  ArraySequence.hpp  BaseTests.hpp  CMakeLists.txt  Exceptions.cpp  Exceptions.hpp  HeapSorter.hpp  ISorter.hpp  LinkedList.hpp  LinkedListSequence.hpp  ListElement.hpp  Optional.hpp  QuickSorter.hpp  ShellSorter.hpp  heapsorter_metrics.txt  main.cpp  quicksorter_metrics.txt  shellsorter_metrics.txt
tasks/: CMakeLists.txt  Exceptions.h  List.h  ListElement.h  MathPhraseParser.7z  MathPhraseParser.cpp  MathPhraseParser.h  TreeNode.cpp  TreeNode.h  main.cpp
